// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ToolbarFieldSla Component should export select options: toolbarFieldOptions 1`] = `
[
  {
    "selected": false,
    "title": "t(curiosity-toolbar.label_sla, {"context":"Premium"})",
    "value": "Premium",
  },
  {
    "selected": false,
    "title": "t(curiosity-toolbar.label_sla, {"context":"Standard"})",
    "value": "Standard",
  },
  {
    "selected": false,
    "title": "t(curiosity-toolbar.label_sla, {"context":"Self-Support"})",
    "value": "Self-Support",
  },
  {
    "selected": false,
    "title": "t(curiosity-toolbar.label_sla, {"context":"none"})",
    "value": "",
  },
]
`;

exports[`ToolbarFieldSla Component should handle updating sla through redux state with component: dispatch, component 1`] = `
[
  [
    [
      {
        "type": "SET_QUERY_RESET_INVENTORY_LIST",
        "viewId": undefined,
      },
      {
        "sla": "Premium",
        "type": "SET_QUERY_RHSM_sla",
        "viewId": undefined,
      },
    ],
  ],
]
`;

exports[`ToolbarFieldSla Component should handle updating sla through redux state with hook: dispatch, hook 1`] = `
[
  [
    [
      {
        "type": "SET_QUERY_RESET_INVENTORY_LIST",
        "viewId": "loremIpsum",
      },
      {
        "sla": "dolor sit",
        "type": "SET_QUERY_RHSM_sla",
        "viewId": "loremIpsum",
      },
    ],
  ],
]
`;

exports[`ToolbarFieldSla Component should render a basic component: basic 1`] = `
<Select
  aria-label="t(curiosity-toolbar.placeholder, {"context":"sla"})"
  ariaLabel="Select option"
  className=""
  data-test="toolbarFieldSla"
  direction="down"
  id="generatedid-"
  isDisabled={false}
  isDropdownButton={false}
  isFlipEnabled={false}
  isInline={true}
  isToggleText={true}
  maxHeight={null}
  name={null}
  onSelect={[Function]}
  onSplitButton={[Function]}
  options={
    [
      {
        "selected": false,
        "title": "t(curiosity-toolbar.label_sla, {"context":"Premium"})",
        "value": "Premium",
      },
      {
        "selected": true,
        "title": "t(curiosity-toolbar.label_sla, {"context":"Standard"})",
        "value": "Standard",
      },
      {
        "selected": false,
        "title": "t(curiosity-toolbar.label_sla, {"context":"Self-Support"})",
        "value": "Self-Support",
      },
      {
        "selected": false,
        "title": "t(curiosity-toolbar.label_sla, {"context":"none"})",
        "value": "",
      },
    ]
  }
  placeholder="t(curiosity-toolbar.placeholder, {"context":"sla"})"
  position="left"
  selectedOptions="Standard"
  splitButtonVariant={null}
  toggleIcon={null}
  variant="single"
/>
`;
